--- a/ManageMyTeam/Views/SchedulingHours/Index.cshtml
+++ b/ManageMyTeam/Views/SchedulingHours/Index.cshtml
@@ -1,8 +1,6 @@
 ﻿@model IEnumerable<ManageMyTeam.Models.SchedulingHour>
 
-@{
-    ViewData["Title"] = "Index";
-}
+@{ ViewData["Title"] = "Index"; }
 
 <h1>Index</h1>
 
@@ -28,26 +26,28 @@
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.SchedulingHourAmount)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.SchedulingHourDate)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Project.ProjectTitle)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Employee.EmployeeName)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.SchedulingHourId">Bearbeiten</a> |
-                <a asp-action="Details" asp-route-id="@item.SchedulingHourId">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.SchedulingHourId">Löschen</a>
-            </td>
-        </tr>
+        @foreach (var item in Model)
+        {
+<tr>
+    <td>
+        @Html.DisplayFor(modelItem => item.SchedulingHourAmount)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.SchedulingHourDate)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.Project.ProjectTitle)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.Employee.EmployeeName)
+    </td>
+    <td>
+        <a asp-action="Edit" asp-route-id="@item.SchedulingHourId">Bearbeiten</a> |
+        <a asp-action="Details" asp-route-id="@item.SchedulingHourId">Details</a> |
+        <a asp-action="Delete" asp-route-id="@item.SchedulingHourId">Löschen</a>
+    </td>
+</tr>
 }
     </tbody>
 </table>
+
