--- a/ManageMyTeam/Views/Employees/Create.cshtml
+++ b/ManageMyTeam/Views/Employees/Create.cshtml
@@ -23,7 +23,7 @@
             </div>
             <div class="form-group">
                 <label>Pensum</label>
-                <input asp-for="WorkLoad" class="form-control" />
+                <input asp-for="WorkLoad"min="0" max="100" class="form-control" />
                 <span asp-validation-for="WorkLoad" class="text-danger"></span>
             </div>
             <div class="form-group">
