--- a/ManageMyTeam/Views/Shared/_Layout.cshtml
+++ b/ManageMyTeam/Views/Shared/_Layout.cshtml
@@ -55,6 +55,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Report" asp-action="Index">Report</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="ProjectOverview" asp-action="Index">Overview</a>
+                        </li>
                     </ul>
                 </div>
             </div>
