--- a/ManageMyTeam/Views/Shared/_Layout.cshtml
+++ b/ManageMyTeam/Views/Shared/_Layout.cshtml
@@ -56,6 +56,9 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Report" asp-action="Index">Report</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="ReportDepartment" asp-action="Index">Department Report</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="ProjectOverview" asp-action="Index">Overview</a>
                         </li>
                     </ul>
