--- a/ManageMyTeam/Views/ReportDepartment/Report.cshtml
+++ b/ManageMyTeam/Views/ReportDepartment/Report.cshtml
@@ -35,19 +35,30 @@
                     datasets: [
                         {
                             label: 'ScheduledHoursDepartment',
-                            data: ScheduledHoursDepartment
-
+                            data: ScheduledHoursDepartment,
+                            backgroundColor: [
+                                'rgba(255, 99, 132, 0.2)'
+                            ],
                         },
                         {
                             label: 'MaximumHoursDepartment',
-                            data: MaximumHoursDepartment
+                            data: MaximumHoursDepartment,
+                            backgroundColor: [
+                                'rgba(255, 159, 64, 0.2)'
+                            ],
                         },
                         {
                             label: 'DemandHoursDepartment',
-                            data: DemandHoursDepartment
+                            data: DemandHoursDepartment,
+                            backgroundColor: [
+                                'rgba(255, 205, 86, 0.2)'
+                            ],
                         },
+                        
                     ],
                     labels: labels
+                    
+
                 },
                 options: {
                     scales: {
@@ -55,8 +66,8 @@
                             display: true,
                             ticks: {
                                 beginAtZero: true,
-                                stepSize: 10,
-                                max: 60,
+                                stepSize: 50,
+                                max: 600,
                                 min: 0
                             }
                         }]
