--- a/ManageMyTeam/Views/Shared/_Layout.cshtml
+++ b/ManageMyTeam/Views/Shared/_Layout.cshtml
@@ -59,7 +59,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="ReportDepartment" asp-action="Index">Department Report</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="ProjectOverview" asp-action="Index">Overview</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Sites" asp-action="Index">Site</a>
                         </li>
                     </ul>
                 </div>
