--- a/ManageMyTeam/Views/Departments/Create.cshtml
+++ b/ManageMyTeam/Views/Departments/Create.cshtml
@@ -18,6 +18,10 @@
                 <span asp-validation-for="DepartmentName" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label>Standort</label>
+                <select asp-for="SiteId" class="form-control" asp-items="ViewBag.SiteId"></select>
+            </div>
+            <div class="form-group">
                 <input type="submit" value="Anlegen" class="btn btn-primary" />
             </div>
         </form>
