--- a/ManageMyTeam/Views/Departments/Details.cshtml
+++ b/ManageMyTeam/Views/Departments/Details.cshtml
@@ -10,11 +10,14 @@
     <h4>Department</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.DepartmentName)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.DepartmentName)
+        </dd>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Site.SiteId)
         </dd>
     </dl>
 </div>
