--- a/ManageMyTeam/Views/PublicHolidays/Create.cshtml
+++ b/ManageMyTeam/Views/PublicHolidays/Create.cshtml
@@ -18,8 +18,12 @@
             </div>
             <div class="form-group">
                 <label>Datum</label>
-                <input asp-for="PublicHolidayDate" class="form-control" type="date"/>
+                <input asp-for="PublicHolidayDate" class="form-control" type="date" />
                 <span asp-validation-for="PublicHolidayDate" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label>Standort</label>
+                <select asp-for="SiteId" class="form-control" asp-items="ViewBag.SiteId"></select>
             </div>
             <div class="form-group">
                 <input type="submit" value="Anlegen" class="btn btn-primary" />
