--- a/ManageMyTeam/Views/PublicHolidays/Edit.cshtml
+++ b/ManageMyTeam/Views/PublicHolidays/Edit.cshtml
@@ -20,8 +20,13 @@
             </div>
             <div class="form-group">
                 <label>Datum</label>
-                <input asp-for="PublicHolidayDate" class="form-control" type="date"/>
+                <input asp-for="PublicHolidayDate" class="form-control" type="date" />
                 <span asp-validation-for="PublicHolidayDate" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label>Standort</label>
+                <select asp-for="SiteId" class="form-control" asp-items="ViewBag.SiteId"></select>
+                <span asp-validation-for="SiteId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Speichern" class="btn btn-primary" />
