--- a/ManageMyTeam/Views/Report/Report.cshtml
+++ b/ManageMyTeam/Views/Report/Report.cshtml
@@ -34,12 +34,15 @@
                     datasets: [
                         {
                             label: 'zu leistende Stunden (Abzgl. Ferien, anhand Pensum)',
-                            data: dataSetAvailableHours
-                            
+                            data: dataSetAvailableHours,
+                            backgroundColor: 'rgba(215, 86, 38, 0.2)'
+              
                         },
                         {
                             label: 'Soll Stunden',
-                            data: dataSetTargetHours
+                            data: dataSetTargetHours,
+                            backgroundColor:'rgba(76, 142, 122, 0.2)'
+                            
                             
                         }
                     ],
@@ -66,3 +69,4 @@
     });
     </script>
 }
+
