--- a/ManageMyTeam/Views/ReportDepartment/Report.cshtml
+++ b/ManageMyTeam/Views/ReportDepartment/Report.cshtml
@@ -36,28 +36,22 @@
                         {
                             label: 'ScheduledHoursDepartment',
                             data: ScheduledHoursDepartment,
-                            backgroundColor: [
-                                'rgba(255, 99, 132, 0.2)'
-                            ],
+                            backgroundColor: 'rgba(255, 99, 132, 0.2)'                            
                         },
                         {
                             label: 'MaximumHoursDepartment',
                             data: MaximumHoursDepartment,
-                            backgroundColor: [
-                                'rgba(255, 159, 64, 0.2)'
-                            ],
+                            backgroundColor: 'rgba(255, 159, 64, 0.2)'                            
                         },
                         {
                             label: 'DemandHoursDepartment',
                             data: DemandHoursDepartment,
-                            backgroundColor: [
-                                'rgba(255, 205, 86, 0.2)'
-                            ],
+                            backgroundColor: 'rgba(255, 205, 86, 0.2)'                           
                         },
-                        
+
                     ],
                     labels: labels
-                    
+
 
                 },
                 options: {
