--- a/ManageMyTeam/Views/Shared/_Layout.cshtml
+++ b/ManageMyTeam/Views/Shared/_Layout.cshtml
@@ -23,25 +23,13 @@
                     <partial name="_LoginPartial" />
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Employees" asp-action="Index">Mitarbeiter</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="BaseLoads" asp-action="Index">Grundlast</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Departments" asp-action="Index">Abteilung</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Employees" asp-action="Index">Mitarbeiter</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Functions" asp-action="Index">Funktion</a>
-                        </li>
-                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Projects" asp-action="Index">Projekt</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="PublicHolidays" asp-action="Index">Feiertage</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="RequirementHours" asp-action="Index">Anforderungen</a>
@@ -53,13 +41,13 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Absences" asp-action="Index">Abwesenheit</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Report" asp-action="Index">Report</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="PublicHolidays" asp-action="Index">Feiertage</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="ReportDepartment" asp-action="Index">Department Report</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Report" asp-action="Index">Auswertung Mitarbeiter</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Sites" asp-action="Index">Site</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="ReportDepartment" asp-action="Index">Auswertung Abteilung</a>
                         </li>
                     </ul>
                 </div>
