--- a/ManageMyTeam/Views/Employees/Index.cshtml
+++ b/ManageMyTeam/Views/Employees/Index.cshtml
@@ -13,7 +13,7 @@
     <thead>
         <tr>
             <th>
-                Name Vorname
+                <a asp-action="Index" asp-route-sortOrder="@ViewData["NameSortParm"]">@Html.DisplayName("Name Vorname")</a>
             </th>
             <th>
                 Work ID
@@ -22,10 +22,10 @@
                 Pensum
             </th>
             <th>
-                Funktion
+                <a asp-action="Index" asp-route-sortOrder="@ViewData["FunctionSortParm"]">@Html.DisplayName("Funktion")</a>
             </th>
             <th>
-                Abteilung
+                <a asp-action="Index" asp-route-sortOrder="@ViewData["DepartmentSortParm"]">@Html.DisplayName("Abteilung")</a>
             </th>
             <th></th>
         </tr>
