--- a/ManageMyTeam/Views/SchedulingHours/Index.cshtml
+++ b/ManageMyTeam/Views/SchedulingHours/Index.cshtml
@@ -11,42 +11,44 @@
     <thead>
         <tr>
             <th>
+                <a asp-action="Index" asp-route-sortOrder="@ViewData["DateSortParm"]">@Html.DisplayName("Datum")</a>
+            </th>
+            <th>
+                <a asp-action="Index" asp-route-sortOrder="@ViewData["EmployeeSortParm"]">@Html.DisplayName("Mitarbeiter")</a>
+            </th>
+            <th>
+                <a asp-action="Index" asp-route-sortOrder="@ViewData["ProjectSortParm"]">@Html.DisplayName("Projekt")</a>  
+            </th>
+            <th>
                 Einplanung Stunden pro Woche
             </th>
-            <th>
-                Kalenderwoche
-            </th>
-            <th>
-                Projekt
-            </th>
-            <th>
-                Mitarbeiter
-            </th>
+
             <th></th>
         </tr>
     </thead>
     <tbody>
         @foreach (var item in Model)
         {
-<tr>
-    <td>
-        @Html.DisplayFor(modelItem => item.SchedulingHourAmount)
-    </td>
-    <td>
-        @Html.DisplayFor(modelItem => item.SchedulingHourDate)
-    </td>
-    <td>
-        @Html.DisplayFor(modelItem => item.Project.ProjectTitle)
-    </td>
-    <td>
-        @Html.DisplayFor(modelItem => item.Employee.EmployeeName)
-    </td>
-    <td>
-        <a asp-action="Edit" asp-route-id="@item.SchedulingHourId">Bearbeiten</a> |
-        <a asp-action="Details" asp-route-id="@item.SchedulingHourId">Details</a> |
-        <a asp-action="Delete" asp-route-id="@item.SchedulingHourId">Löschen</a>
-    </td>
-</tr>
+        <tr>
+
+            <td>
+                @Html.DisplayFor(modelItem => item.SchedulingHourDate)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Employee.EmployeeName)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Project.ProjectTitle)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.SchedulingHourAmount)
+            </td>
+            <td>
+                <a asp-action="Edit" asp-route-id="@item.SchedulingHourId">Bearbeiten</a> |
+                <a asp-action="Details" asp-route-id="@item.SchedulingHourId">Details</a> |
+                <a asp-action="Delete" asp-route-id="@item.SchedulingHourId">Löschen</a>
+            </td>
+        </tr>
 }
     </tbody>
 </table>
