--- a/ManageMyTeam/Views/Employees/Create.cshtml
+++ b/ManageMyTeam/Views/Employees/Create.cshtml
@@ -31,7 +31,7 @@
                 <select asp-for="FunctionId" class ="form-control" asp-items="ViewBag.FunctionId"></select>
             </div>
             <div class="form-group">
-                <label>Abteiung</label>
+                <label>Value Stream</label>
                 <select asp-for="DepartmentId" class ="form-control" asp-items="ViewBag.DepartmentId"></select>
             </div>
             <div class="form-group">
