--- a/ManageMyTeam/Views/Report/Index.cshtml
+++ b/ManageMyTeam/Views/Report/Index.cshtml
@@ -3,7 +3,7 @@
     ViewData["Title"] = "Report";
 }
 
-<h1>Report</h1>
+<h1>Auswertung Mitarbeiter</h1>
 <hr />
 <div class="row">
     <div class="col-md-4">
