--- a/ManageMyTeam/Views/RequirementHours/Create.cshtml
+++ b/ManageMyTeam/Views/RequirementHours/Create.cshtml
@@ -15,7 +15,7 @@
                 <select asp-for="ProjectId" class="form-control" asp-items="ViewBag.ProjectId"></select>
             </div>
             <div class="form-group">
-                <label>Abteilung</label>
+                <label>Value Stream</label>
                 <select asp-for="DepartmentId" class="form-control" asp-items="ViewBag.DepartmentId"></select>
             </div>
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
