--- a/ManageMyTeam/Views/RequirementHours/Edit.cshtml
+++ b/ManageMyTeam/Views/RequirementHours/Edit.cshtml
@@ -17,7 +17,7 @@
                 <span asp-validation-for="ProjectId" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label>Abteilung</label>
+                <label>Value Stream</label>
                 <select asp-for="DepartmentId" class="form-control" asp-items="ViewBag.DepartmentId"></select>
                 <span asp-validation-for="DepartmentId" class="text-danger"></span>
             </div>
