--- a/ManageMyTeam/Views/SchedulingHours/Index.cshtml
+++ b/ManageMyTeam/Views/SchedulingHours/Index.cshtml
@@ -2,7 +2,7 @@
 
 @{ ViewData["Title"] = "Index"; }
 
-<h1>Index</h1>
+<h1>Übersicht</h1>
 
 <p>
     <a asp-action="Create">Einplanung erfassen</a>
@@ -20,7 +20,7 @@
                 <a asp-action="Index" asp-route-sortOrder="@ViewData["ProjectSortParm"]">@Html.DisplayName("Projekt")</a>  
             </th>
             <th>
-                Einplanung Stunden pro Woche
+                Stunden pro Woche
             </th>
 
             <th></th>
