--- a/ManageMyTeam/Views/Shared/_Layout.cshtml
+++ b/ManageMyTeam/Views/Shared/_Layout.cshtml
@@ -47,7 +47,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Report" asp-action="Index">Auswertung Mitarbeiter</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="ReportDepartment" asp-action="Index">Auswertung Abteilung</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="ReportDepartment" asp-action="Index">Auswertung Value Stream</a>
                         </li>
                     </ul>
                 </div>
