--- a/ManageMyTeam/Views/RequirementHours/Index.cshtml
+++ b/ManageMyTeam/Views/RequirementHours/Index.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h1>Übersicht</h1>
 
 <p>
     <a asp-action="Create">Anforderung erfassen</a>
@@ -16,7 +16,7 @@
                 <a asp-action="Index" asp-route-sortOrder="@ViewData["DateSortParm"]">@Html.DisplayName("Datum")</a>
             </th>
             <th>
-                <a asp-action="Index" asp-route-sortOrder="@ViewData["DepartmentSortParm"]">@Html.DisplayName("Abteilung")</a>
+                <a asp-action="Index" asp-route-sortOrder="@ViewData["DepartmentSortParm"]">@Html.DisplayName("Value Stream")</a>
             </th>
             <th>
                 <a asp-action="Index" asp-route-sortOrder="@ViewData["ProjectSortParm"]">@Html.DisplayName("Projekt")</a>
