--- a/ManageMyTeam/Views/Home/Index.cshtml
+++ b/ManageMyTeam/Views/Home/Index.cshtml
@@ -1,7 +1,15 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
-}
+﻿@{ ViewData["Manage My Team"] = "Home Page"; }
+
 
 <div class="text-center">
-    <h1 class="display-4">Welcome to Manage My Team</h1>
+    <h1 class="display-4">Wilkommen bei Manage My Team</h1>
+
+    <h1 class="display-4">Execution Systems CSL Behring</h1>
+
 </div>
+<div class="jumbotron">
+    <img src="~/images/CSL.PNG" style="height:35%; width:35%;">
+
+</div>
+
+
