--- a/ManageMyTeam/Views/Shared/_Layout.cshtml
+++ b/ManageMyTeam/Views/Shared/_Layout.cshtml
@@ -62,7 +62,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2021 - ManageMyTeam - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2021 - Manage My Team Diplomarbeit Cédric Brunner
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
